--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# idea
+.idea/
+*.iml
+
+# maven target
+target/
+
 # Compiled class file
 *.class
 
@@ -21,3 +28,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
